// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionMenu logged-in version renders logged-in version 1`] = `
<Component
  firstName="John"
  locale="en"
  loggedIn={true}
  onMenuToggleClick={[MockFunction]}
>
  <ActionMenu
    firstName="John"
    locale="en"
    loggedIn={true}
    onMenuToggleClick={[MockFunction]}
    t={[Function]}
  >
    <nav
      className="hc-c-header__actions ds-l-col ds-l-col--auto ds-u-margin-left--auto ds-u-font-weight--bold"
      id="hc-c-header__actions"
      role="navigation"
    >
      <LoggedInActionMenu
        firstName="John"
        locale="en"
        loggedIn={true}
        onMenuToggleClick={[MockFunction]}
        t={[Function]}
      >
        <div>
          <span
            className="ds-u-display--none ds-u-sm-display--inline-block"
          >
            John
          </span>
          <MenuButton
            firstName="John"
            locale="en"
            loggedIn={true}
            onMenuToggleClick={[MockFunction]}
            t={[Function]}
          >
            <Button
              aria-controls="hc-c-menu"
              aria-expanded={false}
              aria-label="header.openMenu"
              className="hc-c-action-menu-button ds-u-sm-margin-left--2"
              component="button"
              onClick={[MockFunction]}
              size="small"
              type="button"
            >
              <button
                aria-controls="hc-c-menu"
                aria-expanded={false}
                aria-label="header.openMenu"
                className="ds-c-button ds-c-button--small hc-c-action-menu-button ds-u-sm-margin-left--2"
                onClick={[Function]}
                type="button"
              >
                <MenuIcon
                  className="ds-u-margin-right--1"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-bars fa-w-14 ds-u-margin-right--1"
                    data-icon="bars"
                    data-prefix="fas"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                      fill="currentColor"
                    />
                  </svg>
                </MenuIcon>
                header.menu
              </button>
            </Button>
          </MenuButton>
        </div>
      </LoggedInActionMenu>
    </nav>
  </ActionMenu>
</Component>
`;

exports[`ActionMenu logged-in version set aria-expanded to true 1`] = `
<Component
  firstName="John"
  locale="en"
  loggedIn={true}
  onMenuToggleClick={[MockFunction]}
  open={true}
>
  <ActionMenu
    firstName="John"
    locale="en"
    loggedIn={true}
    onMenuToggleClick={[MockFunction]}
    open={true}
    t={[Function]}
  >
    <nav
      className="hc-c-header__actions ds-l-col ds-l-col--auto ds-u-margin-left--auto ds-u-font-weight--bold"
      id="hc-c-header__actions"
      role="navigation"
    >
      <LoggedInActionMenu
        firstName="John"
        locale="en"
        loggedIn={true}
        onMenuToggleClick={[MockFunction]}
        open={true}
        t={[Function]}
      >
        <div>
          <span
            className="ds-u-display--none ds-u-sm-display--inline-block"
          >
            John
          </span>
          <MenuButton
            firstName="John"
            locale="en"
            loggedIn={true}
            onMenuToggleClick={[MockFunction]}
            open={true}
            t={[Function]}
          >
            <Button
              aria-controls="hc-c-menu"
              aria-expanded={true}
              aria-label="header.closeMenu"
              className="hc-c-action-menu-button ds-u-sm-margin-left--2"
              component="button"
              onClick={[MockFunction]}
              size="small"
              type="button"
            >
              <button
                aria-controls="hc-c-menu"
                aria-expanded={true}
                aria-label="header.closeMenu"
                className="ds-c-button ds-c-button--small hc-c-action-menu-button ds-u-sm-margin-left--2"
                onClick={[Function]}
                type="button"
              >
                <ClearIcon>
                  <svg
                    className="ds-c-clear-icon"
                    height="15"
                    version="1.1"
                    viewBox="0 0 15 15"
                    width="15"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14.6467778,11.2126037 C14.8818403,11.4476661 15,11.7342663 15,12.0711472 C15,12.4080282 14.8818403,12.6946283 14.6467778,12.9296908 L12.9296908,14.6467778 C12.6933713,14.8830973 12.4067711,15.001257 12.0698902,15.001257 C11.7342663,15.001257 11.4476661,14.8830973 11.2126037,14.6467778 L7.49937149,10.9348026 L3.7873963,14.6467778 C3.55233386,14.8830973 3.26573368,15.001257 2.92885276,15.001257 C2.59197184,15.001257 2.30662868,14.8830973 2.07030923,14.6467778 L0.353222157,12.9296908 C0.116902707,12.6946283 0,12.4080282 0,12.0711472 C0,11.7342663 0.116902707,11.4476661 0.353222157,11.2126037 L4.06519735,7.50062851 L0.353222157,3.78865331 C0.116902707,3.55233386 0,3.2669907 0,2.92885276 C0,2.59322886 0.116902707,2.30662868 0.353222157,2.07156624 L2.07030923,0.353222157 C2.30662868,0.118159725 2.59197184,0 2.92885276,0 C3.26573368,0 3.55233386,0.118159725 3.7873963,0.353222157 L7.49937149,4.06519735 L11.2126037,0.353222157 C11.4476661,0.118159725 11.7342663,0 12.0698902,0 C12.4067711,0 12.6933713,0.118159725 12.9296908,0.353222157 L14.6467778,2.07156624 C14.8818403,2.30662868 15,2.59322886 15,2.92885276 C15,3.2669907 14.8818403,3.55233386 14.6467778,3.78865331 L10.9348026,7.50062851 L14.6467778,11.2126037 Z"
                    />
                  </svg>
                </ClearIcon>
                header.menu
              </button>
            </Button>
          </MenuButton>
        </div>
      </LoggedInActionMenu>
    </nav>
  </ActionMenu>
</Component>
`;

exports[`ActionMenu logged-out version renders custom locale switch link 1`] = `
<Component
  locale="en"
  loggedIn={false}
  onMenuToggleClick={[MockFunction]}
  switchLocaleLink="https://ayudalocal.cuidadodesalud.gov/es"
>
  <ActionMenu
    locale="en"
    loggedIn={false}
    onMenuToggleClick={[MockFunction]}
    switchLocaleLink="https://ayudalocal.cuidadodesalud.gov/es"
    t={[Function]}
  >
    <nav
      className="hc-c-header__actions ds-l-col ds-l-col--auto ds-u-margin-left--auto ds-u-font-weight--bold"
      id="hc-c-header__actions"
      role="navigation"
    >
      <LoggedOutActionMenu
        locale="en"
        loggedIn={false}
        onMenuToggleClick={[MockFunction]}
        switchLocaleLink="https://ayudalocal.cuidadodesalud.gov/es"
        t={[Function]}
      >
        <div>
          <LoggedOutLinks
            locale="en"
            switchLocaleLink="https://ayudalocal.cuidadodesalud.gov/es"
          >
            <ul
              className="hc-c-logged-out-links ds-c-list--bare ds-u-display--none ds-u-sm-display--inline-block"
            >
              <li
                className="hc-c-logged-out-links__li"
                key="https://ayudalocal.cuidadodesalud.gov/es"
              >
                <a
                  className="hc-c-logged-out-links__link"
                  href="https://ayudalocal.cuidadodesalud.gov/es"
                >
                  header.español
                </a>
              </li>
              <li
                className="hc-c-logged-out-links__li"
                key="/login"
              >
                <a
                  className="hc-c-logged-out-links__link"
                  href="/login"
                >
                  header.login
                </a>
              </li>
            </ul>
          </LoggedOutLinks>
          <MenuButton
            className="ds-u-display--inline-block ds-u-sm-display--none"
            locale="en"
            loggedIn={false}
            onMenuToggleClick={[MockFunction]}
            switchLocaleLink="https://ayudalocal.cuidadodesalud.gov/es"
            t={[Function]}
          >
            <Button
              aria-controls="hc-c-menu"
              aria-expanded={false}
              aria-label="header.openMenu"
              className="hc-c-action-menu-button ds-u-sm-margin-left--2 ds-u-display--inline-block ds-u-sm-display--none"
              component="button"
              onClick={[MockFunction]}
              size="small"
              type="button"
            >
              <button
                aria-controls="hc-c-menu"
                aria-expanded={false}
                aria-label="header.openMenu"
                className="ds-c-button ds-c-button--small hc-c-action-menu-button ds-u-sm-margin-left--2 ds-u-display--inline-block ds-u-sm-display--none"
                onClick={[Function]}
                type="button"
              >
                <MenuIcon
                  className="ds-u-margin-right--1"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-bars fa-w-14 ds-u-margin-right--1"
                    data-icon="bars"
                    data-prefix="fas"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                      fill="currentColor"
                    />
                  </svg>
                </MenuIcon>
                header.menu
              </button>
            </Button>
          </MenuButton>
        </div>
      </LoggedOutActionMenu>
    </nav>
  </ActionMenu>
</Component>
`;

exports[`ActionMenu logged-out version renders links with absolute URLs 1`] = `
<Component
  locale="en"
  loggedIn={false}
  onMenuToggleClick={[MockFunction]}
  primaryDomain="https://www.healthcare.gov"
>
  <ActionMenu
    locale="en"
    loggedIn={false}
    onMenuToggleClick={[MockFunction]}
    primaryDomain="https://www.healthcare.gov"
    t={[Function]}
  >
    <nav
      className="hc-c-header__actions ds-l-col ds-l-col--auto ds-u-margin-left--auto ds-u-font-weight--bold"
      id="hc-c-header__actions"
      role="navigation"
    >
      <LoggedOutActionMenu
        locale="en"
        loggedIn={false}
        onMenuToggleClick={[MockFunction]}
        primaryDomain="https://www.healthcare.gov"
        t={[Function]}
      >
        <div>
          <LoggedOutLinks
            locale="en"
            primaryDomain="https://www.healthcare.gov"
          >
            <ul
              className="hc-c-logged-out-links ds-c-list--bare ds-u-display--none ds-u-sm-display--inline-block"
            >
              <li
                className="hc-c-logged-out-links__li"
                key="https://www.cuidadodesalud.gov/es/"
              >
                <a
                  className="hc-c-logged-out-links__link"
                  href="https://www.cuidadodesalud.gov/es/"
                >
                  header.español
                </a>
              </li>
              <li
                className="hc-c-logged-out-links__li"
                key="https://www.healthcare.gov/login"
              >
                <a
                  className="hc-c-logged-out-links__link"
                  href="https://www.healthcare.gov/login"
                >
                  header.login
                </a>
              </li>
            </ul>
          </LoggedOutLinks>
          <MenuButton
            className="ds-u-display--inline-block ds-u-sm-display--none"
            locale="en"
            loggedIn={false}
            onMenuToggleClick={[MockFunction]}
            primaryDomain="https://www.healthcare.gov"
            t={[Function]}
          >
            <Button
              aria-controls="hc-c-menu"
              aria-expanded={false}
              aria-label="header.openMenu"
              className="hc-c-action-menu-button ds-u-sm-margin-left--2 ds-u-display--inline-block ds-u-sm-display--none"
              component="button"
              onClick={[MockFunction]}
              size="small"
              type="button"
            >
              <button
                aria-controls="hc-c-menu"
                aria-expanded={false}
                aria-label="header.openMenu"
                className="ds-c-button ds-c-button--small hc-c-action-menu-button ds-u-sm-margin-left--2 ds-u-display--inline-block ds-u-sm-display--none"
                onClick={[Function]}
                type="button"
              >
                <MenuIcon
                  className="ds-u-margin-right--1"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-bars fa-w-14 ds-u-margin-right--1"
                    data-icon="bars"
                    data-prefix="fas"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                      fill="currentColor"
                    />
                  </svg>
                </MenuIcon>
                header.menu
              </button>
            </Button>
          </MenuButton>
        </div>
      </LoggedOutActionMenu>
    </nav>
  </ActionMenu>
</Component>
`;

exports[`ActionMenu logged-out version renders logged-out version 1`] = `
<Component
  locale="en"
  loggedIn={false}
  onMenuToggleClick={[MockFunction]}
>
  <ActionMenu
    locale="en"
    loggedIn={false}
    onMenuToggleClick={[MockFunction]}
    t={[Function]}
  >
    <nav
      className="hc-c-header__actions ds-l-col ds-l-col--auto ds-u-margin-left--auto ds-u-font-weight--bold"
      id="hc-c-header__actions"
      role="navigation"
    >
      <LoggedOutActionMenu
        locale="en"
        loggedIn={false}
        onMenuToggleClick={[MockFunction]}
        t={[Function]}
      >
        <div>
          <LoggedOutLinks
            locale="en"
          >
            <ul
              className="hc-c-logged-out-links ds-c-list--bare ds-u-display--none ds-u-sm-display--inline-block"
            >
              <li
                className="hc-c-logged-out-links__li"
                key="https://www.cuidadodesalud.gov/es/"
              >
                <a
                  className="hc-c-logged-out-links__link"
                  href="https://www.cuidadodesalud.gov/es/"
                >
                  header.español
                </a>
              </li>
              <li
                className="hc-c-logged-out-links__li"
                key="/login"
              >
                <a
                  className="hc-c-logged-out-links__link"
                  href="/login"
                >
                  header.login
                </a>
              </li>
            </ul>
          </LoggedOutLinks>
          <MenuButton
            className="ds-u-display--inline-block ds-u-sm-display--none"
            locale="en"
            loggedIn={false}
            onMenuToggleClick={[MockFunction]}
            t={[Function]}
          >
            <Button
              aria-controls="hc-c-menu"
              aria-expanded={false}
              aria-label="header.openMenu"
              className="hc-c-action-menu-button ds-u-sm-margin-left--2 ds-u-display--inline-block ds-u-sm-display--none"
              component="button"
              onClick={[MockFunction]}
              size="small"
              type="button"
            >
              <button
                aria-controls="hc-c-menu"
                aria-expanded={false}
                aria-label="header.openMenu"
                className="ds-c-button ds-c-button--small hc-c-action-menu-button ds-u-sm-margin-left--2 ds-u-display--inline-block ds-u-sm-display--none"
                onClick={[Function]}
                type="button"
              >
                <MenuIcon
                  className="ds-u-margin-right--1"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-bars fa-w-14 ds-u-margin-right--1"
                    data-icon="bars"
                    data-prefix="fas"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                      fill="currentColor"
                    />
                  </svg>
                </MenuIcon>
                header.menu
              </button>
            </Button>
          </MenuButton>
        </div>
      </LoggedOutActionMenu>
    </nav>
  </ActionMenu>
</Component>
`;
